load("@kroma_network_circom//:build_defs.bzl", "witness_gen_library")
load("@kroma_network_rules_circom//:build_defs.bzl", "compile_circuit")

package(default_visibility = ["//visibility:public"])

exports_files(["multiplier_2.zkey"])

PRIME = "bn128"

compile_circuit(
    name = "compile_multiplier_2",
    main = "multiplier_2.circom",
    prime = PRIME,
)

witness_gen_library(
    name = "gen_witness_multiplier_2",
    gendep = ":compile_multiplier_2",
    prime = PRIME,
)
