load("@kroma_network_circom//:build_defs.bzl", "witness_gen_library")
load("@kroma_network_rules_circom//:build_defs.bzl", "compile_circuit")

package(default_visibility = ["//visibility:public"])

exports_files(["adder.zkey"])

PRIME = "bn128"

compile_circuit(
    name = "compile_adder",
    main = "adder.circom",
    prime = PRIME,
    deps = [
        "@kroma_network_circomlib//circuits:binsum",
        "@kroma_network_circomlib//circuits:bitify",
    ],
)

witness_gen_library(
    name = "gen_witness_adder",
    gendep = ":compile_adder",
    prime = PRIME,
)
