load("@kroma_network_circom//:build_defs.bzl", "witness_gen_library")
load("@kroma_network_rules_circom//:build_defs.bzl", "compile_circuit")

package(default_visibility = ["//visibility:public"])

exports_files(["multiplier_3.zkey"])

PRIME = "bn128"

compile_circuit(
    name = "compile_multiplier_3",
    srcs = ["multiplier_n.circom"],
    main = "multiplier_3.circom",
    prime = PRIME,
    deps = ["//circuits/multiplier_2"],
)

witness_gen_library(
    name = "gen_witness_multiplier_3",
    gendep = ":compile_multiplier_3",
    prime = PRIME,
)
