load("@kroma_network_tachyon//bazel:tachyon_cc.bzl", "tachyon_cc_binary")

tachyon_cc_binary(
    name = "prover_main",
    srcs = ["prover_main.cc"],
    data = [
        "//circuits/adder:adder.zkey",
        "//circuits/adder:compile_adder",
    ],
    deps = [
        "//circuits/adder:gen_witness_adder",
        "@kroma_network_circom//circomlib/circuit:quadratic_arithmetic_program",
        "@kroma_network_circom//circomlib/circuit:witness_loader",
        "@kroma_network_circom//circomlib/zkey:zkey_parser",
        "@kroma_network_tachyon//tachyon/math/elliptic_curves/bn/bn254",
        "@kroma_network_tachyon//tachyon/math/polynomials/univariate:univariate_evaluation_domain_factory",
        "@kroma_network_tachyon//tachyon/zk/r1cs/groth16:prove",
        "@kroma_network_tachyon//tachyon/zk/r1cs/groth16:verify",
    ],
)
